# switchWifi

./: .cproject  .gitignore  .project  sdkconfig
main/: CMakeLists.txt  common.c  common.h  main.c
main/Button/: Button.c  Button.h
main/LED/: led.c  led.h
main/Mqtt/: mqtt.c
main/Pair/HttpServer/: WebServer.c
main/SPIFFS/: spiffs_user.c  spiffs_user.h
main/WiFi/: WiFi_proc.c
main/jsonUser/: json_user.c  json_user.h
